--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -8,8 +10,7 @@
 }
 body{
     box-sizing: border-box;
-    width: 100vw;
-    overflow-x: hidden;
+    max-width: 100%;
     background: url(./imgs/background.jpg);
     background-size: cover; /* Ajuste o tamanho da imagem para cobrir todo o corpo */
     background-repeat: no-repeat; /* Evita repetição da imagem */
@@ -25,32 +26,64 @@ header{
     align-items: center;
     padding: 20px 50px;
     position: fixed;
-    width: 100vw;
-    z-index: 1;
+    width: 100%;
+    z-index: 10;
     color: #fff;
 }
+header nav{
+    display: flex;
+    align-items: center;
+}
+header h2{ 
+    display: none;
+    text-align: center;
+}
+
+header.scroll{
+    background-color: #cabfa5;
+    box-shadow: -1px 3px 19px 0px rgba(94,94,94,1);
+}
+
+header.scroll h2{
+    display: block;
+}
+
 header nav ul{
     display: flex;
     gap: 20px;
 }
 header nav ul li a{
     color: #fff;
+    /* text-transform: uppercase; */
+    font-weight: 600;
+    font-size: 17px;
+}
+header nav ul li a:hover{
+    color: #9B9380;
+}
+header nav i{
+    font-size: 2rem;
 }
 #banner{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    background: url(./imgs/banner.jpeg);
+    background: url(./imgs/banner.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
 }
+#banner h1{
+    color: #fff;
+    font-size: 6rem;
+    font-family: 'Abril Fatface', serif;
+}
 
 .imgs-container{
-    width: calc(100vw);
+    width: 100%;
     display: flex;
     position: relative;
     height: 340px;
@@ -81,14 +114,19 @@ header nav ul li a{
     position: absolute;
     right: 0px;
     top: -150px;
-    right: 14px;
+    right: 0px;
 }
 
 .content{
     width: 1200px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
+.content-texts{
+    width: 100%;
+}
+
 .alt .underline{
     width: 30px;
     border-top: 1px solid #392E26;
@@ -112,6 +150,7 @@ header nav ul li a{
     margin: 0;
     text-transform: uppercase;
 }
+
 #videos .alt h2{
     font-size: 102px;
     color: #392E26;
@@ -140,11 +179,23 @@ header nav ul li a{
 .video-preview{
     background: #fff;
     padding: 15px;
-    
+    position: relative;
+}
+.video-preview img{
+    width: 100%;
+}
+.video-preview i{
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    font-size: 22px;
 }
 .photo-preview{
     background: #fff;
     padding: 15px;
+}
+.photo-preview img{
+    width: 100%;
 }
 .fake-content{
     width: 100%;
@@ -158,7 +209,7 @@ header nav ul li a{
 }
 
 #plataformas{
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -173,45 +224,69 @@ header nav ul li a{
 }
 #plataformas i{
     transition: .3s ease-in;
+    color: #cabfa5;
 
 }
 #plataformas i:hover {
     color: #9B9380;
 }
 
+#videos-preview {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    margin-bottom: 80px;
+}
+    
+.main-video { 
+    grid-area: 1 / 1 / 3 / 3; 
+}
+.main-video img{
+    width: 100%;
+    height: 100%;
+}
+.video1 { 
+    grid-area: 1 / 3 / 2 / 4; 
+    transform: translateY(120px);
+}
+.video2 { 
+    grid-area: 2 / 3 / 3 / 4; 
+    transform: translateY(120px);
+    
+}
+.video3 { grid-area: 1 / 4 / 2 / 5; }
+.video4 { grid-area: 2 / 4 / 3 / 5; }
 
-#videos-preview{
-    display: flex;
-    gap: 20px;
-    height: 650px;
-}
-
-.videos-down{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 20px
-}
-.videos-up{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 20px
-}
 .video-box{
     padding: 15px;
     background-color: #fff;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.video-box i{
+    position: absolute;
+    font-size: 33px !important;
+    z-index: 4;
+}
+.video-box img{
+    width: 100%;
+}
+
+
+
 .fake-video-main{
-    width: 600px;
+    width: 100%;
     height: 400px;
     background-color: #ccc;
 }
 .fake-video{
-    width: 300px;
+    width: 100%;
     height: 150px;
     background-color: #ccc;
 }
@@ -222,9 +297,9 @@ header nav ul li a{
 #contato-content{
     margin-top: 50px;
     margin-bottom: 60px;
-    width: 400px;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    gap: 100px;
 }
 
 #contato-content h2{
@@ -235,3 +310,127 @@ header nav ul li a{
 #contato-content h4{
     color: #D8A17F;
 }
+
+.slider-imgs{
+    width: 100%;
+    display: none;
+}
+
+.image-slider{
+    width: 100%;
+}
+.image-slider img{
+    width: 100%;
+}
+.image-slider .slide{
+    width: 100%;
+    height: 300px;
+    padding: 15px;
+    background-color: #fff;
+}
+
+.fake-content-slider{
+    width: 100%;
+    height: 100%;
+    background-color: #ccc;
+}
+
+#mobile-navbar{
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    background-color: #392E26;
+    z-index: 9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#mobile-navbar i{
+    position: absolute;
+    right: 50px;
+    top: 20px;
+    color: #fff;
+    font-size: 2rem;
+}
+
+#mobile-navbar nav{
+    display: flex;
+    width: 100%;
+}
+#mobile-navbar ul{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 80%;
+}
+#mobile-navbar ul li{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#mobile-navbar ul li:hover{
+    background-color: #9B9380;
+}
+#mobile-navbar ul li a{
+    color: #fff;
+    display: block;
+    width: 100%;
+    height: 100%;
+    font-size: 32px;
+    text-transform: uppercase;
+    font-weight: 700;
+    text-align: center;
+    padding-top: 30px;
+
+
+}
+
+#modal{
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    background-color: #38383886;
+    z-index: 12;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#modal-content{
+    width: 50%;
+    height: 400px;
+    background-color: #fff;
+    border-radius: 5px;
+    overflow: hidden;
+    position: relative;
+    padding: 20px;
+}
+#modal-content button{
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
+
+#ytplayer{
+    width: calc(100%  - 40px);
+    height: 300px;
+    position: absolute;
+    bottom: 20px;
+    background-color: #ccc;
+}
+
+
+
+
+
+
+
