--- a/style.css
+++ b/style.css
@@ -90,14 +90,19 @@ header nav i{
     
 }
 .img-content{
-    width: 37%; 
+    display: flex;
+    width: 37%;
     padding: 20px;
     background-color: #FFF;
+    object-fit: contain;
+    /* justify-content: center; */
+    align-items: center;
+    overflow: hidden;
 }
 .img-content img{
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
+    width: clamp(500px, 100%, 100%);
+    max-height: 500px;
+    object-fit: contain;
 }
 
 .img-content:nth-child(1){
@@ -401,7 +406,7 @@ header nav i{
 }
 #modal-content{
     width: 50%;
-    height: 400px;
+    height: 500px;
     background-color: #fff;
     border-radius: 5px;
     overflow: hidden;
@@ -422,7 +427,7 @@ header nav i{
 
 #ytplayer{
     width: calc(100%  - 40px);
-    height: 300px;
+    height: 400px;
     position: absolute;
     bottom: 20px;
     background-color: #ccc;
