--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,12 @@
+@media screen and (min-width: 1500px) {
+    #plataformas{
+        margin-top: 100px;
+    }
+    #contato{
+        margin-top: 150px;
+    }
+}    
+
 @media screen and (max-width: 1300px) {
     #videos{
         flex-wrap: wrap;
@@ -28,6 +37,7 @@
     }
     .imgs-container{
         display: none;
+        margin-bottom: 10px !important;
     }
     #plataformas{
         transform: translateY(0px);
@@ -101,6 +111,9 @@
     }
 } 
 @media screen and (max-width: 930px) {
+    .imgs-container{
+        margin-bottom: 80px;
+    }
     header nav ul{
         display: none;
     }
